# built-to-serve

./: .gitignore  Dockerfile  LICENSE  README.md  custom_content_parser.py  main.py  models.py  pyproject.toml  repository.py  views.py
.github/workflows/: ci.yml  unit_tests.yml
src/built_to_serve_arazi47/: main.py  repository.py  views.py
src/repository/: repository.py  sqlrepository.py
src/webserver-to-go/: views.py
tests/: test_custom_content_parser.py  test_file_input.html
tests/custom_content_parser/: test_custom_content_parser.py
tests/routing/: test_routing.py
webserver-to-go/: custom_content_parser.py
ws2g/: custom_content_parser.py  main.py  views.py
ws2g/repository/: repository.py  sqlrepository.py
ws2g/services/: view_service.py
ws2g/views/: view_helper.py  views.py
