[tool.poetry]
name = "webserver-to-go"
version = "0.1.0"
description = "A webserver to use when you have no time for configuration"
license = "MIT"
authors = ["Alexis Razi <razialexis43@gmail.com>"]
readme = "README.md"
repository = "https://github.com/arazi47/built-to-serve"
packages = [{include = "webserver-to-go"}]

[tool.poetry.urls]
"Homepage" = "https://github.com/arazi47/built-to-serve"
"Bug Tracker" = "https://github.com/arazi47/built-to-serve/issues"

[tool.poetry.dependencies]
python = "^3.11"
pymongo = "^4.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"